fixing header image on mobile

--- a/app/sass/modules/_hero.scss
+++ b/app/sass/modules/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  background: url(/img/hero.jpg) no-repeat center center fixed;
+  background: url(/img/hero.jpg) no-repeat center center;
   background-size: cover;
   text-align: center;
   color: #fff;
