--- a/app/sass/modules/_responsive.scss
+++ b/app/sass/modules/_responsive.scss
@@ -35,3 +35,9 @@
     display: none;
   }
 }
+
+@media only screen and (min-width: 979px) {
+  .hero {
+    background-attachment: fixed;
+  }
+}
